c/src/test/resources/c/nec_inline_bnc/valid/inf6a.ctrl
<controlFile>
  <sourceFile name="../inf6.c" id="1" />
  <run>
    <startPosition fileId="1" line="9" />
    <wayPoint fileId="1" line="12" />
    <wayPoint fileId="1" line="22" />
    <wayPoint fileId="1" line="26" />
    <wayPoint fileId="1" line="32" />
    <endPosition fileId="1" line="35" />
  </run>
</controlFile>