c/src/test/resources/c/nec_inline_bnc/invalid/ex10-17.ctrl
<controlFile>
  <sourceFile name="../ex10.c" id="1" />
  <run>
    <startPosition fileId="1" line="16" />
    <endPosition fileId="1" line="23" />
  </run>
</controlFile>